# CUNE-Announcement-Site

./: .gitignore  README.md  db.sqlite3  main.py  package-lock.json  pyproject.toml
conf/: settings.py  urls.py
static/: styles.css
static_src/: input.css
submission/: admin.py  forms.py  models.py  send_email.py  tests.py  urls.py  views.py
submission/migrations/: 0001_initial.py  0002_rename_announcement_submission.py  0003_submission_name.py  0004_remove_submission_name_submission_email.py  0005_remove_submission_slide_submissionslide.py  0006_alter_submission_description_alter_submission_email.py  0007_contact.py  0008_rename_chapel_submission_is_chapel_and_more.py
submission/templatetags/: form_extras.py
templates/: base.html
templates/submission/: faq.html  submission.html
