[project]
name = "cune-announcements"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=5.2.1",
    "django-anymail>=13.0",
    "django-browser-reload>=1.18.0",
    "django-tailwind>=4.2.0",
    "dotenv>=0.9.9",
    "pillow>=11.2.1",
]
